--- a/fadeinanimation/index.html
+++ b/fadeinanimation/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>カラーピッカー</title>
+ <title>フェードインアニメーションを作ってみよう</title>
  <link rel="stylesheet" href="css/style.css">
  <script src="js/script.js" defer></script>
 </head>
-
 <body>
- <div>
-  <p id="colorText">カラーコードを検索</p>
-  <input type="color" id="colorPicker">
- </div>
+  <h1 id="heading">JavaScriptでアニメーション</h1>
 </body>
-
 </html>
